--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,12 @@ logging:
       newedu: debug
   #当前磁盘根目录下的spring文件夹创建日志文件目录，使用默认的日志文件名
   path: /springboot/log
+  pattern:
+  # "%d{dd} 输出日期 %-5level 输出日志级别 %logger{50} - %msg%n"
+    console: "%d{dd}  %-5level %logger{0} - %msg%n"
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/attnms?useSSL=false
+    url: jdbc:mysql://localhost:3306/attnms?useSSL=false&?useAffectedRows=true
     username: root
     password: 123456
     hikari:
