--- a/pom.xml
+++ b/pom.xml
@@ -79,15 +79,17 @@
 			<artifactId>bootstrap</artifactId>
 			<version>4.1.1</version>
 		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.webjars.npm</groupId>-->
+			<!--<artifactId>popper.js</artifactId>-->
+			<!--<version>1.14.3</version>-->
+		<!--</dependency>-->
+
+		<!--mybatis分页插件-->
 		<dependency>
-			<groupId>org.webjars.bower</groupId>
-			<artifactId>jquery</artifactId>
-			<version>3.3.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars.npm</groupId>
-			<artifactId>popper.js</artifactId>
-			<version>1.14.3</version>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.2.3</version>
 		</dependency>
 	</dependencies>
 
